name:                sump
version:             0.1.0.0
synopsis:            A Haskell interface to SUMP-compatible logic analyzers
-- description:         
homepage:            http://github.com/bgamari/sump
license:             BSD3
license-file:        LICENSE
author:              Ben Gamari
maintainer:          ben@smart-cactus.org
copyright:           (c) 2014 Ben Gamari
category:            Hardware
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     System.Hardware.Sump
  other-extensions:    GeneralizedNewtypeDeriving
  build-depends:       base >=4.7 && <4.8, data-default >=0.5 && <0.6, transformers >=0.4 && <0.5, either >=4.3 && <4.4, vector >=0.10 && <0.11, bytestring >=0.10 && <0.11, serialport >=0.4 && <0.5
  hs-source-dirs:      src
  default-language:    Haskell2010
